<resources>
    <string name="app_name">一路生活</string>

    <!-- activity 开始 -->
    <string name="activity_identify_one">实名认证第一步</string>
    <string name="activity_identify_two">实名认证第二步</string>
    <string name="activity_identify_three">实名认证第三步</string>
    <!-- activity 结束 -->

    <!-- fragment 开始 -->
    <string name="fragment_home">首页</string>
    <string name="fragment_find">发现</string>
    <string name="fragment_shopping_mall">商城</string>
    <string name="fragment_mine">我的</string>
    <string name="fragment_group">群聊</string>
    <!-- fragment 结束 -->

    <!-- title 开始 -->
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <!-- title 结束 -->

    <!--控件展示，与文字提示 开始-->
    <string name="hint_username">请输入手机号</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="send_msg">获取验证码</string>
    <string name="new_send_msg">重新获取</string>
    <string name="txt_next">下一步</string>
    <string name="success_register">完成注册</string>
    <string name="phone_tip">请输入正确的手机号</string>
    <string name="pwd_tip">请输入6-12位密码</string>
    <string name="code_tip">请输入验证码</string>
    <string name="pwd_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="group_chat_fragment">群聊</string>
    <string name="one_earn">一路赚</string>
    <string name="find_friend">发现朋友圈</string>
    <string name="master_friend">掌握朋友圈动态</string>
    <string name="find_spread">一路推广</string>
    <string name="master_invite">邀请好友得好礼</string>
    <string name="find_drift">漂流瓶</string>
    <string name="master_see">查看附近好友</string>
    <string name="one_play">一路玩</string>
    <string name="collection">商品收藏</string>
    <string name="history">浏览历史</string>
    <string name="evaluated">待评价</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">查看全部订单</string>

    <string name="text_fragment_mine_online_application" translatable="false">在线申请</string>
    <string name="text_fragment_mine_credit_card" translatable="false">办信用卡</string>
    <string name="text_fragment_mine_credit_card_introduction" translatable="false">最高10000000额度  快至当天发卡</string>

    <string name="tv_setting">更多设置</string>
    <string name="tv_shopping_apply">商城申请</string>
    <string name="service_phone">客服电话</string>
    <string name="tv_service">在线客服</string>
    <string name="tv_address">收货地址</string>

    <string name="tv_stay_retreat">退款/售后</string>
    <string name="tv_stay_collect">待收货</string>
    <string name="tv_stay_goods">待发货</string>
    <string name="tv_stay_pay">待付款</string>
    <string name="tv_shop_cart">购物车</string>
    <string name="login_out">安全退出</string>
    <string name="more_setup">更多设置</string>
    <string name="pay">立即支付</string>
    <string name="shopping_apply">商城申请</string>
    <string name="online_card">在线办卡</string>
    <string name="btn_commit">提交审核</string>
    <!--控件展示，与文字提示 结束-->
    <!-- tip -->
    <string name="net_work_error">网络异常，请检查网络</string>

    <!-- 发送短信场景值 -->
    <string name="registered">注册</string>
    <string name="login">登录</string>
    <string name="modify_login_pwd">修改登录密码</string>
    <string name="modify_Pay_pwd">修改支付密码</string>
    <string name="replace_phone_number">修改手机号</string>

</resources>
