<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.ui.main.MainActivity"
    android:background="@android:color/white"
    >
    <include layout="@layout/view_title"/>
    <include layout="@layout/division_line"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_30"
            android:background="@mipmap/find_banner1_bg"
            android:orientation="horizontal"
            >
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_friend"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/space_40"
                    android:layout_marginLeft="@dimen/space_24"
                    android:layout_marginTop="@dimen/space_50"
                    />
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="@dimen/space_180"
                    android:layout_height="@dimen/space_52"
                    android:text="立即加入"
                    android:textSize="@dimen/space_24"
                    android:gravity="center"
                    android:background="@drawable/share_btn_add"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginLeft="@dimen/space_24"
                    android:layout_marginTop="@dimen/space_20"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </com.zhy.autolayout.AutoLinearLayout>
        <include layout="@layout/divisions_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_70"
            android:text="@string/one_earn"
            android:textColor="@color/textColors"
            android:layout_marginLeft="@dimen/space_24"
            android:gravity="center_vertical"
            />
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/ly_friend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/find_business_bg"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginLeft="@dimen/space_10"
                android:orientation="horizontal"
                >
                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_friend"
                        android:textColor="@color/textColors"
                        android:textSize="@dimen/space_30"
                        android:layout_marginLeft="@dimen/space_24"
                        android:layout_marginTop="@dimen/space_30"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/master_friend"
                        android:textColor="@color/tipColor"
                        android:textSize="@dimen/space_24"
                        android:layout_marginLeft="@dimen/space_24"
                        android:layout_marginTop="@dimen/space_24"
                        />

                </com.zhy.autolayout.AutoLinearLayout>
                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/find_friends"
                        android:layout_centerInParent="true"
                        />
                </com.zhy.autolayout.AutoRelativeLayout>
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/ly_spread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/find_invite_bg"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:orientation="horizontal"
                >
                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_spread"
                        android:textColor="@color/textColors"
                        android:textSize="@dimen/space_30"
                        android:layout_marginLeft="@dimen/space_24"
                        android:layout_marginTop="@dimen/space_30"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/master_invite"
                        android:textColor="@color/tipColor"
                        android:textSize="@dimen/space_24"
                        android:layout_marginLeft="@dimen/space_24"
                        android:layout_marginTop="@dimen/space_24"
                        />

                </com.zhy.autolayout.AutoLinearLayout>
                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/find_invite_icon"
                        android:layout_centerInParent="true"
                        />
                </com.zhy.autolayout.AutoRelativeLayout>
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_70"
            android:text="@string/one_play"
            android:textColor="@color/textColors"
            android:layout_marginLeft="@dimen/space_24"
            android:gravity="center_vertical"
            />
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/find_bottle_bg"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_20"
            android:orientation="horizontal"
            >
            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/ly_drift"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_drift"
                    android:textColor="@color/textColors"
                    android:textSize="@dimen/space_30"
                    android:layout_marginLeft="@dimen/space_24"
                    android:layout_marginTop="@dimen/space_30"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/master_see"
                    android:textColor="@color/tipColor"
                    android:textSize="@dimen/space_24"
                    android:layout_marginLeft="@dimen/space_24"
                    android:layout_marginTop="@dimen/space_24"
                    />

            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/find_bottle_icon"
                    android:layout_centerInParent="true"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
