<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_title"/>
    <include layout="@layout/division_line"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/space_70"
        android:paddingRight="@dimen/space_70"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/space_200"
            android:layout_height="@dimen/space_200"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_100"
            />
        <com.hjq.widget.ClearEditText
            android:id="@+id/ed_phone"
            android:hint="请输入手机号"
            android:inputType="number"
            android:maxLength="13"
            style="@style/login_register"
            android:layout_marginTop="@dimen/space_70"
            />
        <include layout="@layout/division_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_20"
            >
            <com.hjq.widget.ClearEditText
                android:id="@+id/ed_pwd"
                android:hint="请输入密码"
                style="@style/login_register"
                android:layout_width="0dp"
                android:inputType="textPassword"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/tv_forgot_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/forgot_pwd"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/space_30"
                />
        </LinearLayout>
        <include layout="@layout/division_line"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80"
            android:background="@drawable/share_btn"
            android:layout_marginLeft="@dimen/space_50"
            android:layout_marginRight="@dimen/space_50"
            android:layout_marginTop="@dimen/space_100"
            android:text="@string/title_login"
            android:textColor="@android:color/white"
            />
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_100"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/space_50"
            android:layout_marginRight="@dimen/space_50"
            >
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="立即注册"
                android:gravity="center_vertical"
                android:textSize="@dimen/font_size_30px"
                android:textColor="@color/tipColor"
                />

            <TextView
                android:id="@+id/tv_login_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pwd_login"
                android:gravity="center_vertical|right"
                android:textSize="@dimen/font_size_30px"
                android:textColor="@color/tipColor"
                />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>